// Copyright 2021-2023 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package customfeatures;

import "google/protobuf/descriptor.proto";

extend google.protobuf.FeatureSet {
  optional TestFeatures test = 9999;
}

message TestFeatures {
  optional int32 int_file_feature = 1 [
    retention = RETENTION_RUNTIME,
    targets = TARGET_TYPE_FILE,
    targets = TARGET_TYPE_MESSAGE,
    edition_defaults = { edition: EDITION_PROTO2, value: "-2" },
    edition_defaults = { edition: EDITION_PROTO3, value: "-3" },
    edition_defaults = { edition: EDITION_2023, value: "1" },
    edition_defaults = { edition: EDITION_99997_TEST_ONLY, value: "2" },
    edition_defaults = { edition: EDITION_99998_TEST_ONLY, value: "3" }
  ];
}
